# serokell-task-d

./: .gitignore  Cargo.toml
src/: lib.rs  parser.rs  query.rs  runner.rs  tests.rs  todo_list.rs
src/runner/: storage.rs
tests/fixtures/: sample.in  sample.out
