[package]
name = "todo_swamp"
version = "0.1.0"
authors = ["Jonn Mostovoy <jm@serokell.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1"

[dependencies]
rand = "0.7"
tokio = { version = "1.39.2", features = ["full"] }
fst = { version = "0.4.7", features = ["levenshtein"] }

[dependencies.nom]
version = "5"
features = ["regexp"]
